--- a/ufrmmain.lfm
+++ b/ufrmmain.lfm
@@ -3,7 +3,7 @@ object frmAddVector: TfrmAddVector
   Height = 482
   Top = 162
   Width = 744
-  Caption = 'Add Vector'
+  Caption = 'Vector Operation'
   ClientHeight = 482
   ClientWidth = 744
   LCLVersion = '1.6.2.0'
@@ -161,5 +161,14 @@ object frmAddVector: TfrmAddVector
     Width = 31
     Caption = '0 ms'
     ParentColor = False
+  end
+  object btnSubtract: TButton
+    Left = 648
+    Height = 25
+    Top = 56
+    Width = 75
+    Caption = 'Subtract'
+    OnClick = btnSubtractClick
+    TabOrder = 16
   end
 end
